--- a/.github/workflows/build onecloud-22.11.yml
+++ b/.github/workflows/build onecloud-22.11.yml
@@ -15,7 +15,7 @@ jobs:
         run: |
           sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys  EE727D4449467F0E
     
-      - name: Checkout armbian/build
+      - name: Checkout armbian
         run: |
            git clone --depth=1 --branch=master https://github.com/TooYoungTooSimp/s805-armbian-build
 
