--- a/.github/workflows/build onecloud-24.11.yml
+++ b/.github/workflows/build onecloud-24.11.yml
@@ -16,7 +16,7 @@ jobs:
         run: |
           sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys  EE727D4449467F0E
     
-      - name: Checkout armbian/build
+      - name: Checkout armbian
         run: |
            git clone --depth=1 --branch=main https://github.com/hy5528/ArmbianOS-Builder
 
