--- a/.github/workflows/build onecloud-main.yml
+++ b/.github/workflows/build onecloud-main.yml
@@ -3,7 +3,16 @@ name: build onecloud-main
 on:
   repository_dispatch:
   workflow_dispatch:
-
+    inputs:
+      repo_url:
+        description: 'REPO URL'
+        required: true
+        default: 'https://github.com/armbian/build.git'
+      repo_branch:
+        description: 'REPO BRANCH'
+        required: true
+        
+        default: 'main'
 jobs:
   build:
     runs-on: ubuntu-20.04
