--- a/.github/workflows/build onecloud-main.yml
+++ b/.github/workflows/build onecloud-main.yml
@@ -9,8 +9,8 @@ on:
         required: true
         default: 'https://github.com/armbian/build.git'
       armbian_branch:
+        type: choic
         description: "Choose framework branch"
-        required: false
         options:
         - v23.11
         - main
