--- a/.github/workflows/build onecloud-main.yml
+++ b/.github/workflows/build onecloud-main.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Install key 
         run: |
           sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys  EE727D4449467F0E  
-      - name: Checkout armbian/build
+      - name: Checkout build
         run: |
           git clone --depth=1 --branch=main https://github.com/hy5528/build
            
