--- a/.github/workflows/build onecloud-main.yml
+++ b/.github/workflows/build onecloud-main.yml
@@ -28,6 +28,14 @@ jobs:
         shell: bash
         run: |
           rsync -av current/userpatches/. build/userpatches/
+     - name: Remove existing build folder
+       run: |
+         if [ -d "build" ]; then
+           echo "Removing existing build folder"
+           rm -rf build
+         else
+           echo "No existing build folder found"
+         fi
           
       - name: Build
         run: |
