--- a/.github/workflows/build onecloud-22.05.yml
+++ b/.github/workflows/build onecloud-22.05.yml
@@ -31,7 +31,7 @@ jobs:
         run: |
           sudo rm -r onecloud-armbian-build/lib
           rsync -av current/patch/. onecloud-armbian-build/
-    
+          sudo chmod 777 onecloud-armbian-build/compile.sh
       - name: Build
         run: |
           cd onecloud-armbian-build
