--- a/.github/workflows/build onecloud-main.yml
+++ b/.github/workflows/build onecloud-main.yml
@@ -29,13 +29,13 @@ jobs:
       - name: "Copy userpatches to build folder"
         shell: bash
         run: |
-          sudo rm -r s805-armbian-build/lib     
-          rsync -av current/patch/. s805-armbian-build/
-          sudo chmod 777 s805-armbian-build/compile.sh
+          sudo rm -r build/lib     
+          rsync -av current/patch/. build/
+          sudo chmod 777 build/compile.sh
           
       - name: Build
         run: |
-          cd s805-armbian-build
+          cd build
           # Don't update remote cache
           sudo ./compile.sh BOARD=onecloud BRANCH=current RELEASE=jammy BUILD_MINIMAL=yes BUILD_DESKTOP=no KERNEL_ONLY=no KERNEL_CONFIGURE=no COMPRESS_OUTPUTIMAGE=sha,gpg,img DOWNLOAD_MIRROR=china MAINLINE_MIRROR=tuna EXTRAWIFI=no
           sudo chown $(id -u):$(id -g) -R output/
@@ -60,7 +60,7 @@ jobs:
 
       - name: Extract boot and rootfs partitions
         run: |
-          diskimg=$(ls s805-armbian-build/output/images/*.img)
+          diskimg=$(ls build/output/images/*.img)
           loop=$(sudo losetup --find --show --partscan $diskimg)
           sudo img2simg ${loop}p1 burn/boot.simg
           sudo img2simg ${loop}p2 burn/rootfs.simg
@@ -79,13 +79,13 @@ jobs:
           VERIFY:rootfs:normal:rootfs.VERIFY
           EOF
 
-          prefix=$(ls s805-armbian-build/output/images/*.img | sed 's/\.img$//')
+          prefix=$(ls build/output/images/*.img | sed 's/\.img$//')
           burnimg=${prefix}.burn.img
           ./AmlImg pack $burnimg burn/
 
       - name: Hash and compress images
         run: |
-          for f in s805-armbian-build/output/images/*.img; do
+          for f in build/output/images/*.img; do
             sha256sum "$f" | tee -a sha256sum
             xz --threads=0 --compress "$f"
           done
@@ -103,4 +103,4 @@ jobs:
           append_body: true
           body_path: Release.md
           files: |
-            s805-armbian-build/output/images/*
+            build/output/images/*
