--- a/.github/workflows/build onecloud-main.yml
+++ b/.github/workflows/build onecloud-main.yml
@@ -17,7 +17,7 @@ jobs:
     
       - name: Checkout armbian
         run: |
-           git clone --depth=1 --branch=master https://github.com/armbian/build
+           git clone --depth=1 --branch=main https://github.com/armbian/build
 
       - name: "Checkout current repository"
         uses: actions/checkout@v4
