Update and rename Build Armbian.yml to Build Armbian-22.05.yml

--- a/.github/workflows/Build Armbian-22.05.yml
+++ b/.github/workflows/Build Armbian-22.05.yml
@@ -1,4 +1,4 @@
-name: Build Armbian Customize Board
+name: Build Armbian-22.05
   
 on:  
   workflow_dispatch:  
@@ -9,10 +9,7 @@ on:
         required: false 
         type: choice
         options: 
-          - main
           - master
-          - v24.11
-          - v24.08
 env:
   TZ: Asia/Shanghai
   
