--- a/.github/workflows/build onecloud-v.yml
+++ b/.github/workflows/build onecloud-v.yml
@@ -3,7 +3,18 @@ name: build onecloud-v
 on:
   repository_dispatch:
   workflow_dispatch:
-
+    inputs:  
+      Version:
+        description: 'Armbian Version'
+        default: 'main'
+        required: false 
+        type: choice
+        options: 
+          - main
+          - v23.11
+          - v24.05
+          - v24.08
+          - v24.11
 jobs:
   build:
     runs-on: ubuntu-20.04
@@ -15,7 +26,7 @@ jobs:
           sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys  EE727D4449467F0E  
       - name: Checkout armbian/build
         run: |
-           git clone --depth=1 --branch=v24.11 https://github.com/armbian/build
+           git clone --depth=1 --branch=${{ github.event.inputs.Version }} https://github.com/armbian/build
            
       - name: "Checkout current repository"
         uses: actions/checkout@v4
