--- a/.github/workflows/build onecloud-22.05.yml
+++ b/.github/workflows/build onecloud-22.05.yml
@@ -10,14 +10,14 @@ jobs:
 
       
     steps:
-      
+
       - name: Install key 
         run: |
           sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys  EE727D4449467F0E
     
       - name: Checkout armbian
         run: |
-           git clone --depth=1 --branch=master https://github.com/raysworld/onecloud-armbian-build
+           git clone --depth=1 --branch=master https://github.com/raysworld/onecloud-armbian-build.git build 
 
       - name: "Checkout current repository"
         uses: actions/checkout@v4
@@ -29,14 +29,15 @@ jobs:
       - name: "Copy userpatches to build folder"
         shell: bash
         run: |
-          sudo rm -r onecloud-armbian-build/lib
-          rsync -av current/patch/. onecloud-armbian-build/
-          sudo chmod 777 onecloud-armbian-build/compile.sh
+          sudo rm -r build/lib     
+          rsync -av current/patch/. build/
+          sudo chmod 777 build/compile.sh
+          
       - name: Build
         run: |
-          cd onecloud-armbian-build
+          cd build
           # Don't update remote cache
-          sudo ./compile.sh BOARD=onecloud BRANCH=current RELEASE=jammy BUILD_MINIMAL=yes BUILD_DESKTOP=no KERNEL_ONLY=no KERNEL_CONFIGURE=no COMPRESS_OUTPUTIMAGE=img DOWNLOAD_MIRROR=china MAINLINE_MIRROR=tuna EXTRAWIFI=no
+          sudo ./compile.sh BOARD=onecloud BRANCH=current RELEASE=jammy BUILD_MINIMAL=yes BUILD_DESKTOP=no KERNEL_ONLY=no KERNEL_CONFIGURE=no COMPRESS_OUTPUTIMAGE=sha,gpg,img DOWNLOAD_MIRROR=china MAINLINE_MIRROR=tuna EXTRAWIFI=no
           sudo chown $(id -u):$(id -g) -R output/
 
       - name: Install Dependents
@@ -59,7 +60,7 @@ jobs:
 
       - name: Extract boot and rootfs partitions
         run: |
-          diskimg=$(ls onecloud-armbian-build/output/images/*.img)
+          diskimg=$(ls build/output/images/*.img)
           loop=$(sudo losetup --find --show --partscan $diskimg)
           sudo img2simg ${loop}p1 burn/boot.simg
           sudo img2simg ${loop}p2 burn/rootfs.simg
@@ -78,13 +79,13 @@ jobs:
           VERIFY:rootfs:normal:rootfs.VERIFY
           EOF
 
-          prefix=$(ls onecloud-armbian-build/output/images/*.img | sed 's/\.img$//')
+          prefix=$(ls build/output/images/*.img | sed 's/\.img$//')
           burnimg=${prefix}.burn.img
           ./AmlImg pack $burnimg burn/
 
       - name: Hash and compress images
         run: |
-          for f in onecloud-armbian-build/output/images/*.img; do
+          for f in build/output/images/*.img; do
             sha256sum "$f" | tee -a sha256sum
             xz --threads=0 --compress "$f"
           done
@@ -102,4 +103,4 @@ jobs:
           append_body: true
           body_path: Release.md
           files: |
-            onecloud-armbian-build/output/images/*
+            build/output/images/*
