--- a/.github/workflows/build onecloud.yml
+++ b/.github/workflows/build onecloud.yml
@@ -1,4 +1,4 @@
-name: build onecloud
+name: build onecloud-22.11
 
 on:
   repository_dispatch:
@@ -17,9 +17,21 @@ jobs:
     
       - name: Checkout armbian
         run: |
-           git clone --depth=1 --branch=master https://github.com/hy5528/s805-armbian-build.git build 
+           git clone --depth=1 --branch=master https://github.com/TooYoungTooSimp/s805-armbian-build.git build 
 
-      
+      - name: "Checkout current repository"
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          clean: false
+          path: current
+          
+      - name: "Copy userpatches to build folder"
+        shell: bash
+        run: |
+          sudo rm -r build/lib     
+          rsync -av current/patch/. build/
+          sudo chmod 777 build/compile.sh
           
       - name: Build
         run: |
@@ -87,7 +99,7 @@ jobs:
       - name: Upload to release
         uses: softprops/action-gh-release@v2
         with:
-          tag_name: Armbian_Onecloud_jammy_5.9.0-docker2
+          tag_name: Armbian_Onecloud_jammy_5.9.0-docker
           append_body: true
           body_path: Release.md
           files: |
