--- a/patch/config/kernel/linux-onecloud-current.config
+++ b/patch/config/kernel/linux-onecloud-current.config
@@ -34,13 +34,13 @@ CONFIG_CGROUP_CPUACCT=y
 CONFIG_CGROUP_PERF=y
 CONFIG_CGROUP_BPF=y
 CONFIG_CGROUP_MISC=y
-CONFIG_CGROUP_DEBUG=y
 CONFIG_NAMESPACES=y
 CONFIG_USER_NS=y
 CONFIG_BLK_DEV_INITRD=y
 CONFIG_EXPERT=y
 CONFIG_PERF_EVENTS=y
 CONFIG_KEXEC=y
+# CONFIG_CRASH_DUMP is not set
 CONFIG_ARCH_MESON=y
 CONFIG_ARM_THUMBEE=y
 CONFIG_PL310_ERRATA_588369=y
@@ -82,6 +82,7 @@ CONFIG_PARTITION_ADVANCED=y
 CONFIG_CMDLINE_PARTITION=y
 CONFIG_BINFMT_MISC=m
 CONFIG_CMA=y
+CONFIG_CMA_AREAS=7
 CONFIG_NET=y
 CONFIG_PACKET=y
 CONFIG_PACKET_DIAG=m
@@ -342,7 +343,6 @@ CONFIG_IP_NF_MANGLE=m
 CONFIG_IP_NF_TARGET_ECN=m
 CONFIG_IP_NF_TARGET_TTL=m
 CONFIG_IP_NF_RAW=m
-CONFIG_IP_NF_ARPTABLES=m
 CONFIG_IP_NF_ARPFILTER=m
 CONFIG_IP_NF_ARP_MANGLE=m
 CONFIG_NFT_DUP_IPV6=m
@@ -392,7 +392,6 @@ CONFIG_BRIDGE_EBT_REDIRECT=m
 CONFIG_BRIDGE_EBT_SNAT=m
 CONFIG_BRIDGE_EBT_LOG=m
 CONFIG_BRIDGE_EBT_NFLOG=m
-CONFIG_BPFILTER=y
 CONFIG_IP_DCCP=m
 CONFIG_RDS=m
 CONFIG_RDS_TCP=m
@@ -417,9 +416,6 @@ CONFIG_VLAN_8021Q_GVRP=y
 CONFIG_VLAN_8021Q_MVRP=y
 CONFIG_LLC2=m
 CONFIG_ATALK=m
-CONFIG_DEV_APPLETALK=m
-CONFIG_IPDDP=m
-CONFIG_IPDDP_ENCAP=y
 CONFIG_X25=m
 CONFIG_LAPB=m
 CONFIG_PHONET=m
@@ -491,7 +487,6 @@ CONFIG_NET_ACT_GACT=m
 CONFIG_GACT_PROB=y
 CONFIG_NET_ACT_MIRRED=m
 CONFIG_NET_ACT_SAMPLE=m
-CONFIG_NET_ACT_IPT=m
 CONFIG_NET_ACT_NAT=m
 CONFIG_NET_ACT_PEDIT=m
 CONFIG_NET_ACT_SIMP=m
@@ -567,8 +562,10 @@ CONFIG_BT_ATH3K=m
 CONFIG_BT_MTKSDIO=m
 CONFIG_BT_MTKUART=m
 CONFIG_BT_VIRTIO=m
+CONFIG_BT_NXPUART=m
 CONFIG_AF_RXRPC_IPV6=y
 CONFIG_AF_RXRPC_INJECT_LOSS=y
+CONFIG_AF_RXRPC_INJECT_RX_DELAY=y
 CONFIG_AF_RXRPC_DEBUG=y
 CONFIG_RXKAD=y
 CONFIG_CFG80211=m
@@ -580,10 +577,9 @@ CONFIG_MAC80211_DEBUGFS=y
 CONFIG_RFKILL=m
 CONFIG_RFKILL_INPUT=y
 CONFIG_RFKILL_GPIO=m
+CONFIG_PAGE_POOL_STATS=y
 CONFIG_PCI=y
-# CONFIG_PCIEASPM is not set
 CONFIG_PCI_MSI=y
-# CONFIG_VGA_ARB is not set
 CONFIG_PCI_HOST_GENERIC=y
 # CONFIG_PCI_MESON is not set
 CONFIG_UEVENT_HELPER=y
@@ -601,6 +597,7 @@ CONFIG_OF_OVERLAY=y
 CONFIG_ZRAM=m
 CONFIG_ZRAM_WRITEBACK=y
 CONFIG_ZRAM_MEMORY_TRACKING=y
+CONFIG_ZRAM_MULTI_COMP=y
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_DRBD=m
 CONFIG_DRBD_FAULT_INJECTION=y
@@ -630,9 +627,6 @@ CONFIG_SATA_AHCI=y
 CONFIG_SATA_AHCI_PLATFORM=y
 CONFIG_SATA_MV=y
 CONFIG_MD=y
-CONFIG_MD_LINEAR=m
-CONFIG_MD_MULTIPATH=m
-CONFIG_MD_FAULTY=m
 CONFIG_BCACHE=m
 CONFIG_BCACHE_ASYNC_REGISTRATION=y
 CONFIG_BLK_DEV_DM=m
@@ -746,6 +740,7 @@ CONFIG_DWMAC_DWC_QOS_ETH=y
 # CONFIG_NET_VENDOR_XILINX is not set
 CONFIG_REALTEK_PHY=y
 # CONFIG_MDIO_BUS_MUX_MESON_G12A is not set
+# CONFIG_MDIO_BUS_MUX_MESON_GXL is not set
 CONFIG_PPP=m
 CONFIG_PPP_BSDCOMP=m
 CONFIG_PPP_DEFLATE=m
@@ -769,6 +764,7 @@ CONFIG_USB_PEGASUS=m
 CONFIG_USB_RTL8150=m
 CONFIG_USB_RTL8152=m
 CONFIG_USB_LAN78XX=m
+CONFIG_USB_USBNET=m
 CONFIG_USB_NET_CDC_EEM=m
 CONFIG_USB_NET_HUAWEI_CDC_NCM=m
 CONFIG_USB_NET_CDC_MBIM=m
@@ -780,6 +776,7 @@ CONFIG_USB_NET_SMSC95XX=m
 CONFIG_USB_NET_GL620A=m
 CONFIG_USB_NET_PLUSB=m
 CONFIG_USB_NET_MCS7830=m
+CONFIG_USB_NET_RNDIS_HOST=m
 CONFIG_USB_ALI_M5632=y
 CONFIG_USB_AN2720=y
 CONFIG_USB_EPSON2888=y
@@ -847,6 +844,14 @@ CONFIG_RTL8192CU=m
 CONFIG_RTL8XXXU=m
 CONFIG_RTL8XXXU_UNTESTED=y
 CONFIG_RTW88=m
+CONFIG_RTW88_8822BS=m
+CONFIG_RTW88_8822BU=m
+CONFIG_RTW88_8822CS=m
+CONFIG_RTW88_8822CU=m
+CONFIG_RTW88_8723DS=m
+CONFIG_RTW88_8723DU=m
+CONFIG_RTW88_8821CS=m
+CONFIG_RTW88_8821CU=m
 CONFIG_RTW89=m
 CONFIG_RSI_91X=m
 # CONFIG_RSI_DEBUGFS is not set
@@ -861,7 +866,6 @@ CONFIG_WL12XX=m
 CONFIG_WL18XX=m
 CONFIG_WLCORE_SPI=m
 CONFIG_WLCORE_SDIO=m
-CONFIG_RTL8723DU=m
 CONFIG_RTL8723DS=m
 CONFIG_RTL8822BU=m
 CONFIG_RTL8821CU=m
@@ -869,9 +873,7 @@ CONFIG_88XXAU=m
 CONFIG_RTL8192EU=m
 CONFIG_RTL8189FS=m
 CONFIG_RTL8189ES=m
-CONFIG_USB_ZD1201=m
 CONFIG_ZD1211RW=m
-CONFIG_USB_NET_RNDIS_WLAN=m
 CONFIG_VIRT_WIFI=m
 CONFIG_NETDEVSIM=m
 CONFIG_NET_FAILOVER=y
@@ -888,7 +890,6 @@ CONFIG_MOUSE_SYNAPTICS_USB=m
 CONFIG_SERIAL_MESON=y
 CONFIG_SERIAL_MESON_CONSOLE=y
 CONFIG_SERIAL_DEV_BUS=y
-CONFIG_TTY_PRINTK=y
 CONFIG_VIRTIO_CONSOLE=y
 CONFIG_HW_RANDOM=y
 # CONFIG_HW_RANDOM_ARM_SMCCC_TRNG is not set
@@ -1109,11 +1110,13 @@ CONFIG_VIDEO_VICODEC=m
 CONFIG_VIDEO_VIMC=m
 CONFIG_VIDEO_VIVID=m
 CONFIG_VIDEO_VIVID_CEC=y
-CONFIG_DVB_MB86A16=m
+CONFIG_VIDEO_VISL=m
+CONFIG_VISL_DEBUGFS=y
 CONFIG_DRM=y
 CONFIG_DRM_MALI_DISPLAY=y
 # CONFIG_DRM_DW_HDMI_I2S_AUDIO is not set
 CONFIG_DRM_MESON=y
+# CONFIG_DRM_MESON_DW_MIPI_DSI is not set
 CONFIG_DRM_LIMA=y
 CONFIG_FB=y
 CONFIG_FB_SIMPLE=y
@@ -1121,10 +1124,10 @@ CONFIG_FB_MODE_HELPERS=y
 CONFIG_FRAMEBUFFER_CONSOLE_ROTATION=y
 CONFIG_SOUND=m
 CONFIG_SND=m
-CONFIG_SND_DYNAMIC_MINORS=y
 # CONFIG_SND_PCI is not set
 # CONFIG_SND_SPI is not set
 CONFIG_SND_USB_AUDIO=m
+CONFIG_SND_USB_AUDIO_MIDI_V2=y
 CONFIG_SND_USB_UA101=m
 CONFIG_SND_USB_CAIAQ=m
 CONFIG_SND_USB_CAIAQ_INPUT=y
@@ -1136,10 +1139,11 @@ CONFIG_SND_USB_PODHD=m
 CONFIG_SND_USB_TONEPORT=m
 CONFIG_SND_USB_VARIAX=m
 CONFIG_SND_SOC=m
-CONFIG_SND_MESON_AIU=m
+CONFIG_SND_MESON_GX_SOUND_CARD=m
 # CONFIG_SND_SOC_MESON_T9015 is not set
 CONFIG_SND_SIMPLE_CARD=m
 CONFIG_SND_AUDIO_GRAPH_CARD=m
+# CONFIG_I2C_HID is not set
 CONFIG_USB_LED_TRIG=y
 CONFIG_USB_ULPI_BUS=y
 CONFIG_USB_CONN_GPIO=y
@@ -1246,6 +1250,7 @@ CONFIG_USB_LD=m
 CONFIG_USB_TRANCEVIBRATOR=m
 CONFIG_USB_ISIGHTFW=m
 CONFIG_USB_YUREX=m
+CONFIG_USB_ONBOARD_DEV=y
 CONFIG_USB_ULPI=y
 CONFIG_USB_GADGET=y
 CONFIG_U_SERIAL_CONSOLE=y
@@ -1265,6 +1270,7 @@ CONFIG_USB_CONFIGFS_F_UAC1=y
 CONFIG_USB_CONFIGFS_F_UAC1_LEGACY=y
 CONFIG_USB_CONFIGFS_F_UAC2=y
 CONFIG_USB_CONFIGFS_F_MIDI=y
+CONFIG_USB_CONFIGFS_F_MIDI2=y
 CONFIG_USB_CONFIGFS_F_HID=y
 CONFIG_USB_CONFIGFS_F_UVC=y
 CONFIG_USB_CONFIGFS_F_PRINTER=y
@@ -1314,7 +1320,6 @@ CONFIG_LEDS_TRIGGER_CAMERA=y
 CONFIG_LEDS_TRIGGER_PANIC=y
 CONFIG_LEDS_TRIGGER_NETDEV=y
 CONFIG_LEDS_TRIGGER_PATTERN=y
-CONFIG_LEDS_TRIGGER_AUDIO=y
 CONFIG_LEDS_TRIGGER_TTY=y
 CONFIG_EDAC=y
 CONFIG_RTC_CLASS=y
@@ -1394,6 +1399,7 @@ CONFIG_XFS_POSIX_ACL=y
 CONFIG_XFS_RT=y
 CONFIG_XFS_ONLINE_SCRUB=y
 CONFIG_XFS_ONLINE_REPAIR=y
+CONFIG_XFS_DEBUG=y
 CONFIG_GFS2_FS=y
 CONFIG_OCFS2_FS=y
 CONFIG_OCFS2_DEBUG_FS=y
@@ -1419,7 +1425,7 @@ CONFIG_VIRTIO_FS=y
 CONFIG_OVERLAY_FS=y
 CONFIG_FSCACHE=y
 CONFIG_FSCACHE_STATS=y
-CONFIG_CACHEFILES=y
+CONFIG_CACHEFILES=m
 CONFIG_ISO9660_FS=y
 CONFIG_JOLIET=y
 CONFIG_ZISOFS=y
@@ -1428,14 +1434,13 @@ CONFIG_MSDOS_FS=y
 CONFIG_VFAT_FS=y
 CONFIG_FAT_DEFAULT_UTF8=y
 CONFIG_EXFAT_FS=y
-CONFIG_NTFS_FS=y
-CONFIG_NTFS_RW=y
-CONFIG_NTFS3_FS=y
 CONFIG_NTFS3_LZX_XPRESS=y
 CONFIG_NTFS3_FS_POSIX_ACL=y
+CONFIG_NTFS_FS=y
 CONFIG_PROC_CHILDREN=y
 CONFIG_TMPFS=y
 CONFIG_TMPFS_POSIX_ACL=y
+CONFIG_TMPFS_QUOTA=y
 CONFIG_ORANGEFS_FS=m
 CONFIG_ADFS_FS=m
 CONFIG_AFFS_FS=m
@@ -1448,6 +1453,7 @@ CONFIG_BFS_FS=m
 CONFIG_EFS_FS=m
 CONFIG_CRAMFS=m
 CONFIG_SQUASHFS=m
+CONFIG_SQUASHFS_CHOICE_DECOMP_BY_MOUNT=y
 CONFIG_SQUASHFS_XATTR=y
 CONFIG_SQUASHFS_LZ4=y
 CONFIG_SQUASHFS_LZO=y
@@ -1471,7 +1477,11 @@ CONFIG_SYSV_FS=m
 CONFIG_UFS_FS=m
 CONFIG_EROFS_FS=m
 CONFIG_EROFS_FS_ZIP_LZMA=y
+CONFIG_EROFS_FS_ZIP_DEFLATE=y
+CONFIG_EROFS_FS_PCPU_KTHREAD=y
+# CONFIG_EROFS_FS_PCPU_KTHREAD_HIPRI is not set
 CONFIG_NFS_FS=y
+CONFIG_NFS_V2=y
 CONFIG_NFS_V3_ACL=y
 CONFIG_NFS_V4=y
 CONFIG_NFS_SWAP=y
@@ -1479,15 +1489,19 @@ CONFIG_NFS_V4_1=y
 CONFIG_NFS_V4_2=y
 CONFIG_NFS_V4_1_MIGRATION=y
 CONFIG_ROOT_NFS=y
-CONFIG_NFS_FSCACHE=y
 CONFIG_NFSD=m
+CONFIG_NFSD_V2=y
+CONFIG_NFSD_V2_ACL=y
 CONFIG_NFSD_V3_ACL=y
 CONFIG_NFSD_V4=y
 CONFIG_NFSD_BLOCKLAYOUT=y
 CONFIG_NFSD_SCSILAYOUT=y
 CONFIG_NFSD_FLEXFILELAYOUT=y
 CONFIG_NFSD_V4_2_INTER_SSC=y
+# CONFIG_NFSD_LEGACY_CLIENT_TRACKING is not set
 CONFIG_RPCSEC_GSS_KRB5=m
+CONFIG_RPCSEC_GSS_KRB5_ENCTYPES_CAMELLIA=y
+CONFIG_RPCSEC_GSS_KRB5_ENCTYPES_AES_SHA2=y
 CONFIG_SUNRPC_DEBUG=y
 CONFIG_CEPH_FS=m
 CONFIG_CEPH_FSCACHE=y
@@ -1585,13 +1599,10 @@ CONFIG_CRYPTO_TWOFISH=m
 CONFIG_CRYPTO_ADIANTUM=m
 CONFIG_CRYPTO_ARC4=m
 CONFIG_CRYPTO_CBC=m
-CONFIG_CRYPTO_CFB=m
 CONFIG_CRYPTO_CTS=m
-CONFIG_CRYPTO_ECB=m
 CONFIG_CRYPTO_HCTR2=m
 CONFIG_CRYPTO_KEYWRAP=m
 CONFIG_CRYPTO_LRW=m
-CONFIG_CRYPTO_OFB=m
 CONFIG_CRYPTO_XTS=m
 CONFIG_CRYPTO_AEGIS128=m
 CONFIG_CRYPTO_CHACHA20POLY1305=m
@@ -1616,7 +1627,6 @@ CONFIG_CRYPTO_USER_API_HASH=m
 CONFIG_CRYPTO_USER_API_SKCIPHER=m
 CONFIG_CRYPTO_USER_API_RNG=m
 CONFIG_CRYPTO_USER_API_AEAD=m
-CONFIG_CRYPTO_STATS=y
 CONFIG_CRYPTO_GHASH_ARM_CE=m
 CONFIG_CRYPTO_NHPOLY1305_NEON=m
 CONFIG_CRYPTO_BLAKE2B_NEON=m
@@ -1638,11 +1648,11 @@ CONFIG_SYSTEM_BLACKLIST_KEYRING=y
 CONFIG_PACKING=y
 CONFIG_PRIME_NUMBERS=m
 CONFIG_CRC4=m
-CONFIG_CRC8=m
 CONFIG_DMA_CMA=y
 CONFIG_CMA_SIZE_MBYTES=64
 CONFIG_PRINTK_TIME=y
 CONFIG_DEBUG_INFO_DWARF5=y
 CONFIG_DEBUG_INFO_BTF=y
 CONFIG_MAGIC_SYSRQ=y
+CONFIG_DEBUG_MEMORY_INIT=y
 CONFIG_FTRACE_SYSCALLS=y
