--- a/patch/config/kernel/linux-onecloud-current.config
+++ b/patch/config/kernel/linux-onecloud-current.config
@@ -2101,7 +2101,7 @@ CONFIG_MII=y
 CONFIG_NET_CORE=y
 CONFIG_BONDING=y
 CONFIG_DUMMY=m
-# CONFIG_WIREGUARD is not set
+CONFIG_WIREGUARD=y
 # CONFIG_WIREGUARD_DEBUG is not set
 # CONFIG_EQUALIZER is not set
 # CONFIG_IFB is not set
